CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0 FATAL_ERROR)
SET(PROJECTNAME IO)
PROJECT(${PROJECTNAME})
ADD_DEFINITIONS("-DIO_API")
SET(CMAKE_CXX_STANDARD 11)

IF(NOT DEFINED Qt5_DIR)
	SET(Qt5_DIR "Qt5_DIR-NOTFOUND" CACHE PATH "Qt5_DIR")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_INCLUDE)
	SET(FASTCAE_VTK_INCLUDE "FASTCAE_VTK_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_VTK_INCLUDE")		
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_INCLUDE)
	SET(FASTCAE_OCC_INCLUDE "FASTCAE_OCC_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_OCC_INCLUDE")		
ENDIF()
IF(NOT DEFINED FASTCAE_QUAZIP_INCLUDE)
	SET(FASTCAE_QUAZIP_INCLUDE "FASTCAE_QUAZIP_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_INCLUDE")		
ENDIF()
IF(Qt5_DIR STREQUAL "Qt5_DIR-NOTFOUND")		
	MESSAGE(SEND_ERROR "Qt5_DIR is null, please specified Qt5Config.cmake location!~")
ENDIF()
IF(FASTCAE_VTK_INCLUDE STREQUAL "FASTCAE_VTK_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_VTK_INCLUDE is null, please specified VTK include directory!~")
ENDIF()
IF(FASTCAE_OCC_INCLUDE STREQUAL "FASTCAE_OCC_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_OCC_INCLUDE is null, please specified OCC include directory!~")
ENDIF()
IF(FASTCAE_QUAZIP_INCLUDE STREQUAL "FASTCAE_QUAZIP_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_INCLUDE is null, please specified QUAZIP include directory!~")
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	IF(NOT DEFINED FASTCAE_VTK_SO_DIR)
		SET(FASTCAE_VTK_SO_DIR "FASTCAE_VTK_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_SO_DIR")			
	ENDIF()	
	IF(NOT DEFINED FASTCAE_OCC_SO_DIR)
		SET(FASTCAE_OCC_SO_DIR "FASTCAE_OCC_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_SO_DIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_SO_DIR)
		SET(FASTCAE_QUAZIP_SO_DIR "FASTCAE_QUAZIP_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_SO_DIR")			
	ENDIF()
	IF(FASTCAE_VTK_SO_DIR STREQUAL "FASTCAE_VTK_SO_DIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_SO_DIR is null, please specified VTK so directory!~")
	ENDIF()
	IF(FASTCAE_OCC_SO_DIR STREQUAL "FASTCAE_OCC_SO_DIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_SO_DIR is null, please specified OCC so directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_SO_DIR STREQUAL "FASTCAE_QUAZIP_SO_DIR-NOTFOUND")		
		MESSAGE(FATAL_ERROR "FASTCAE_QUAZIP_SO_DIR is null, please specified QUAZIP so directory!~")
	ENDIF()
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin)		
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	IF(NOT DEFINED FASTCAE_VTK_LIBDIR)
		SET(FASTCAE_VTK_LIBDIR "FASTCAE_VTK_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_LIBDDIR)
		SET(FASTCAE_VTK_LIBDDIR "FASTCAE_VTK_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_BINDIR)
		SET(FASTCAE_VTK_BINDIR "FASTCAE_VTK_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_BINDDIR)
		SET(FASTCAE_VTK_BINDDIR "FASTCAE_VTK_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_LIBDIR)
		SET(FASTCAE_OCC_LIBDIR "FASTCAE_OCC_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_LIBDDIR)
		SET(FASTCAE_OCC_LIBDDIR "FASTCAE_OCC_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_BINDIR)
		SET(FASTCAE_OCC_BINDIR "FASTCAE_OCC_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_BINDDIR)
		SET(FASTCAE_OCC_BINDDIR "FASTCAE_OCC_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDDIR")			
	ENDIF()
	
	IF(NOT DEFINED FASTCAE_QUAZIP_LIBDIR)
		SET(FASTCAE_QUAZIP_LIBDIR "FASTCAE_QUAZIP_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_LIBDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_LIBDDIR)
		SET(FASTCAE_QUAZIP_LIBDDIR "FASTCAE_QUAZIP_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_LIBDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_BINDIR)
		SET(FASTCAE_QUAZIP_BINDIR "FASTCAE_QUAZIP_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_BINDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_BINDDIR)
		SET(FASTCAE_QUAZIP_BINDDIR "FASTCAE_QUAZIP_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_BINDDIR")			
	ENDIF()
	
	IF(FASTCAE_VTK_LIBDIR STREQUAL "FASTCAE_VTK_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDIR is null, please specified VTK lib directory!~")
	ENDIF()
	IF(FASTCAE_VTK_LIBDDIR STREQUAL "FASTCAE_VTK_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDDIR is null, please specified VTK libd directory!~")
	ENDIF()
	IF(FASTCAE_VTK_BINDIR STREQUAL "FASTCAE_VTK_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDIR is null, please specified VTK bin directory!~")
	ENDIF()
	IF(FASTCAE_VTK_BINDDIR STREQUAL "FASTCAE_VTK_BINDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDDIR is null, please specified VTK bind directory!~")
	ENDIF()	
	IF(FASTCAE_OCC_LIBDIR STREQUAL "FASTCAE_OCC_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_LIBDIR is null, please specified OCC lib directory!~")
	ENDIF()
	IF(FASTCAE_OCC_LIBDDIR STREQUAL "FASTCAE_OCC_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_LIBDDIR is null, please specified OCC libd directory!~")
	ENDIF()
	IF(FASTCAE_OCC_BINDIR STREQUAL "FASTCAE_OCC_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_BINDIR is null, please specified OCC bin directory!~")
	ENDIF()
	IF(FASTCAE_OCC_BINDDIR STREQUAL "FASTCAE_OCC_BINDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_BINDDIR is null, please specified OCC bind directory!~")
	ENDIF()	
	IF(FASTCAE_QUAZIP_LIBDIR STREQUAL "FASTCAE_QUAZIP_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_LIBDIR is null, please specified QUAZIP lib directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_LIBDDIR STREQUAL "FASTCAE_QUAZIP_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_LIBDDIR is null, please specified QUAZIP libd directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_BINDIR STREQUAL "FASTCAE_QUAZIP_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_BINDIR is null, please specified QUAZIP bin directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_BINDDIR STREQUAL "FASTCAE_QUAZIP_BINDDIR-NOTFOUND")		
		MESSAGE(FATAL_ERROR "FASTCAE_QUAZIP_BINDDIR is null, please specified QUAZIP bind directory!~")
	ENDIF()
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d)    
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin) 
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d)   
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin)		
ENDIF()

#FILE(GLOB IO_TS_FILE "${TOP_CMAKE_CURRENT_SOURCE_DIR}/qrc/translations/IO_zh_CN.ts")
FILE(GLOB SRC_H_FILES "*.h")
FILE(GLOB SRC_CPP_FILES "*.cpp")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..
					${CMAKE_CURRENT_SOURCE_DIR}
					${FASTCAE_VTK_INCLUDE} 
					${FASTCAE_OCC_INCLUDE} 
					${FASTCAE_QUAZIP_INCLUDE})
					
#FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Xml LinguistTools REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Xml REQUIRED)
#SET_SOURCE_FILES_PROPERTIES(${IO_TS_FILE} PROPERTIES OUTPUT_LOCATION "${TOP_CMAKE_CURRENT_SOURCE_DIR}/qrc/translations")
#QT5_CREATE_TRANSLATION(IO_QM_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${IO_TS_FILE} OPTIONS -noobsolete)
SET(CMAKE_AUTOMOC ON)
#SOURCE_GROUP("Translation" FILES ${IO_QM_FILE} ${IO_TS_FILE})
SOURCE_GROUP("Generated Files" FILES "${PROJECT_BINARY_DIR}/${PROJECTNAME}_autogen/mocs_compilation.cpp")

ADD_LIBRARY(${PROJECTNAME} SHARED #${IO_TS_FILE}
								  #${IO_QM_FILE}
								  ${SRC_H_FILES}
								  ${SRC_CPP_FILES})					   
TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::Core Qt5::Widgets Qt5::Xml)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")	
	IF(NOT DEFINED FASTCAE_VTK_SOS_0)
		FILE(GLOB FASTCAE_VTK_SOS_0 "${FASTCAE_VTK_SO_DIR}/*.so")
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_SOS_0)		
		FILE(GLOB FASTCAE_OCC_SOS_0 "${FASTCAE_OCC_SO_DIR}/*.so")
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_SOS_0)		
		FILE(GLOB FASTCAE_QUAZIP_SOS_0 "${FASTCAE_QUAZIP_SO_DIR}/*.so")
	ENDIF()
	
	FOREACH(FASTCAE_VTK_SO_0 ${FASTCAE_VTK_SOS_0})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_VTK_SO_0})
	ENDFOREACH()
	FOREACH(FASTCAE_OCC_SO_0 ${FASTCAE_OCC_SOS_0})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_OCC_SO_0})
	ENDFOREACH()	
	FOREACH(FASTCAE_QUAZIP_SO_0 ${FASTCAE_QUAZIP_SOS_0})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_QUAZIP_SO_0})
	ENDFOREACH()		
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libSettings${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libSettings${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libDataProperty${CMAKE_DEBUG_POSTFIX}.so"  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libDataProperty${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libMeshData${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libMeshData${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libGeometry${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libGeometry${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libMaterial${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libMaterial${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libModelData${CMAKE_DEBUG_POSTFIX}.so"     optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libModelData${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libModuleBase${CMAKE_DEBUG_POSTFIX}.so"    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libModuleBase${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libPluginManager${CMAKE_DEBUG_POSTFIX}.so" optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libPluginManager${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libGmshModule${CMAKE_DEBUG_POSTFIX}.so"    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libGmshModule${CMAKE_RELEASE_POSTFIX}.so")  
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	IF(NOT DEFINED FASTCAE_VTK_LIBDS)
		FILE(GLOB FASTCAE_VTK_LIBDS "${FASTCAE_VTK_LIBDDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_LIBS)
		FILE(GLOB FASTCAE_VTK_LIBS "${FASTCAE_VTK_LIBDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_LIBDS)
		FILE(GLOB FASTCAE_OCC_LIBDS "${FASTCAE_OCC_LIBDDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_OCC_LIBS)
		FILE(GLOB FASTCAE_OCC_LIBS "${FASTCAE_OCC_LIBDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_LIBDS)
		FILE(GLOB FASTCAE_QUAZIP_LIBDS "${FASTCAE_QUAZIP_LIBDDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_QUAZIP_LIBS)
		FILE(GLOB FASTCAE_QUAZIP_LIBS "${FASTCAE_QUAZIP_LIBDDIR}/*.lib")
	ENDIF()
	
	FOREACH(FASTCAE_VTK_LIBD ${FASTCAE_VTK_LIBDS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_VTK_LIBD})
	ENDFOREACH()	
	FOREACH(FASTCAE_VTK_LIB ${FASTCAE_VTK_LIBS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_VTK_LIB})
	ENDFOREACH()	
	FOREACH(FASTCAE_OCC_LIBD ${FASTCAE_OCC_LIBDS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_OCC_LIBD})
	ENDFOREACH()	
	FOREACH(FASTCAE_OCC_LIB ${FASTCAE_OCC_LIBS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_OCC_LIB})
	ENDFOREACH()
	FOREACH(FASTCAE_QUAZIP_LIBD ${FASTCAE_QUAZIP_LIBDS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_QUAZIP_LIBD})
	ENDFOREACH()	
	FOREACH(FASTCAE_QUAZIP_LIB ${FASTCAE_QUAZIP_LIBS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_QUAZIP_LIB})
	ENDFOREACH()	
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/Settings${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/Settings${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/DataProperty${CMAKE_DEBUG_POSTFIX}.lib"  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/DataProperty${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/MeshData${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/MeshData${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/Geometry${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/Geometry${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/Material${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/Material${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/ModelData${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/ModelData${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/ModuleBase${CMAKE_DEBUG_POSTFIX}.lib"    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/ModuleBase${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/PluginManager${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/PluginManager${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/GmshModule${CMAKE_DEBUG_POSTFIX}.lib"    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/GmshModule${CMAKE_RELEASE_POSTFIX}.lib")
ENDIF()

IF(TARGET SolutionDataIO)
	ADD_DEPENDENCIES(${PROJECTNAME} Settings DataProperty MeshData Geometry Material ModelData ModuleBase PluginManager GmshModule)
ENDIF()									 