CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0 FATAL_ERROR)
SET(PROJECTNAME PluginCustomizer)
PROJECT(${PROJECTNAME})
ADD_DEFINITIONS("-DCUSTOMIZERPLUGIN_API")
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

IF(NOT DEFINED Qt5_DIR)
	SET(Qt5_DIR "Qt5_DIR-NOTFOUND" CACHE PATH "Qt5_DIR")
ENDIF()
IF(Qt5_DIR STREQUAL "Qt5_DIR-NOTFOUND")		
	MESSAGE(SEND_ERROR "Qt5_DIR is null, please specified Qt5Config.cmake location!~")
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)	
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d/plugins)    
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins) 
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d/plugins)   
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)		
ENDIF()

SET(SRC_QRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../qrc/qianfan.qrc" "${CMAKE_CURRENT_SOURCE_DIR}/resource/customizer.qrc")
FILE(GLOB SRC_UI_FILES "*.ui")
FILE(GLOB SRC_H_FILES "*.h")
FILE(GLOB SRC_CPP_FILES "*.cpp")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Xml REQUIRED)
QT5_ADD_RESOURCES(SRC_Generated_QRC_FILE ${SRC_QRC_FILE})
QT5_WRAP_UI(SRC_Generated_UI_FILES ${SRC_UI_FILES})
SET(CMAKE_AUTOMOC ON)
SOURCE_GROUP("rc" FILES ${SRC_QRC_FILE} ${SRC_Generated_QRC_FILE})
SOURCE_GROUP("Ui" FILES ${SRC_Generated_UI_FILES} ${SRC_UI_FILES})
SOURCE_GROUP("Generated Files" FILES "${PROJECT_BINARY_DIR}/${PROJECTNAME}_autogen/mocs_compilation.cpp")

ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_Generated_QRC_FILE}
								  ${SRC_Generated_UI_FILES}								   
								  ${SRC_H_FILES}
								  ${SRC_CPP_FILES})
TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Xml)										
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMeshData${CMAKE_DEBUG_POSTFIX}.so"          optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMeshData${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libGeometry${CMAKE_DEBUG_POSTFIX}.so"    	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libGeometry${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libModelData${CMAKE_DEBUG_POSTFIX}.so"    	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libModelData${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libModuleBase${CMAKE_DEBUG_POSTFIX}.so"    	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libModuleBase${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libDataProperty${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libDataProperty${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libIO${CMAKE_DEBUG_POSTFIX}.so"       	      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libIO${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libSettings${CMAKE_DEBUG_POSTFIX}.so"   	   	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libSettings${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libSelfDefObject${CMAKE_DEBUG_POSTFIX}.so"	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libSelfDefObject${CMAKE_RELEASE_POSTFIX}.so"				 
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libSolverControl${CMAKE_DEBUG_POSTFIX}.so"     optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libSolverControl${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMainWidgets${CMAKE_DEBUG_POSTFIX}.so"       optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMainWidgets${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libProjectTree${CMAKE_DEBUG_POSTFIX}.so"       optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libProjectTree${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libGeometryCommand${CMAKE_DEBUG_POSTFIX}.so"   optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libGeometryCommand${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libConfigOptions${CMAKE_DEBUG_POSTFIX}.so"     optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libConfigOptions${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libProjectTreeExtend${CMAKE_DEBUG_POSTFIX}.so" optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libProjectTreeExtend${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMaterial${CMAKE_DEBUG_POSTFIX}.so" 		  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMaterial${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libPythonModule${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libPythonModule${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libPostWidgets${CMAKE_DEBUG_POSTFIX}.so"	   	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libPostWidgets${CMAKE_RELEASE_POSTFIX}.so"						 
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libGeometryWidgets${CMAKE_DEBUG_POSTFIX}.so"   optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libGeometryWidgets${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMainWindow${CMAKE_DEBUG_POSTFIX}.so"   	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMainWindow${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libPluginManager${CMAKE_DEBUG_POSTFIX}.so"     optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libPluginManager${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libBCBase${CMAKE_DEBUG_POSTFIX}.so"     	   	  optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libBCBase${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libSARibbonBar${CMAKE_DEBUG_POSTFIX}.so"       optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libSARibbonBar${CMAKE_RELEASE_POSTFIX}.so")
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")	
	FIND_PACKAGE(Qt5 COMPONENTS AxContainer REQUIRED)
	TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::AxContainer)
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../MeshData${CMAKE_DEBUG_POSTFIX}.lib"          optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../MeshData${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../Geometry${CMAKE_DEBUG_POSTFIX}.lib"    	    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../Geometry${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ModelData${CMAKE_DEBUG_POSTFIX}.lib"    	 	optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ModelData${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ModuleBase${CMAKE_DEBUG_POSTFIX}.lib"        optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ModuleBase${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../DataProperty${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../DataProperty${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../IO${CMAKE_DEBUG_POSTFIX}.lib"       	     	optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../IO${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../Settings${CMAKE_DEBUG_POSTFIX}.lib"   	    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../Settings${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../SelfDefObject${CMAKE_DEBUG_POSTFIX}.lib"	 	optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../SelfDefObject${CMAKE_RELEASE_POSTFIX}.lib"				 
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../SolverControl${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../SolverControl${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../MainWidgets${CMAKE_DEBUG_POSTFIX}.lib"       optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../MainWidgets${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ProjectTree${CMAKE_DEBUG_POSTFIX}.lib"       optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ProjectTree${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../GeometryCommand${CMAKE_DEBUG_POSTFIX}.lib"   optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../GeometryCommand${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ConfigOptions${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ConfigOptions${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ProjectTreeExtend${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ProjectTreeExtend${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../Material${CMAKE_DEBUG_POSTFIX}.lib" 		 	optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../Material${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../PythonModule${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../PythonModule${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../PostWidgets${CMAKE_DEBUG_POSTFIX}.lib"	    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../PostWidgets${CMAKE_RELEASE_POSTFIX}.lib"						 
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../GeometryWidgets${CMAKE_DEBUG_POSTFIX}.lib"   optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../GeometryWidgets${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../MainWindow${CMAKE_DEBUG_POSTFIX}.lib"   	 	optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../MainWindow${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../PluginManager${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../PluginManager${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../BCBase${CMAKE_DEBUG_POSTFIX}.lib"     	    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../BCBase${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../SARibbonBar${CMAKE_DEBUG_POSTFIX}.lib"     	optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../SARibbonBar${CMAKE_RELEASE_POSTFIX}.lib")										 
ENDIF()	

IF(TARGET SolutionDataIO)
	ADD_DEPENDENCIES(${PROJECTNAME} MeshData Geometry ModelData ModuleBase DataProperty IO Settings SelfDefObject SolverControl MainWidgets ProjectTree GeometryCommand ConfigOptions ProjectTreeExtend Material PythonModule PostWidgets GeometryWidgets MainWindow PluginManager BCBase SARibbonBar)
ENDIF()										